--- a/roles/wordpress/tasks/main.yml
+++ b/roles/wordpress/tasks/main.yml
@@ -26,6 +26,6 @@
 
 - name: Set up wp-config
   template:
-    src: "wp-config.php.j2"
+    src: "roles/wordpress/files/wp-config.php.j2"
     dest: "/var/www/{{ http_host }}/wordpress/wp-config.php"
   tags: [ wordpress ]
